# wordly

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  dev.sh  dict  docker-build.sh  docker-run.sh  launch.json
include/: CheckResult.hpp  Dictionary.hpp  SessionOptions.hpp  UIHelper.hpp  Wordly.hpp
src/: Dictionary.cpp  UIHelper.cpp  Wordly.cpp  main.cpp
